// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Meaning 1`] = `
<div>
  <div
    class="main-body"
  >
    <header
      class="Header"
    >
      <nav
        class="navbar navbar-expand-md navbar-light"
      >
        <div
          class="container"
        >
          <a
            class="active navbar-brand"
            href="/"
            title="electronic Babylonian Library (eBL)"
          >
            <h1
              class="Header__title"
            >
              <span
                class="Header__title-main"
              >
                electronic
                <br />
                <span
                  class="Header__title-main__caps"
                >
                  B
                </span>
                abylonian
                <br />
                <span
                  class="Header__title-main__caps"
                >
                  L
                </span>
                ibrary
              </span>
              <small
                class="Header__title-abbreviation"
              >
                e
                <small
                  class="Header__title-abbreviation__caps"
                >
                  bl
                </small>
              </small>
            </h1>
          </a>
          <span
            class="navbar-brand"
          >
            <div
              class="Header__logo-container container"
            >
              <a
                href="https://www.lmu.de"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  class="Header__lmu-logo img-fluid"
                  src="LMU_Logo.svg"
                />
              </a>
              <a
                href="https://badw.de/"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  class="Header__badw-logo img-fluid"
                  src="BAdW_Logo.svg"
                />
              </a>
            </div>
          </span>
          <button
            aria-controls="Header-23"
            aria-label="Toggle navigation"
            class="navbar-toggler collapsed"
            type="button"
          >
            <span
              class="navbar-toggler-icon"
            />
          </button>
          <div
            class="navbar-collapse collapse"
            id="Header-23"
          >
            <div
              class="d-flex justify-content-between"
              id="navbar-container"
            >
              <div
                id="menu-lines"
              >
                <div
                  class="mx-auto navbar-nav"
                >
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/signs"
                      href="/signs"
                    >
                      Signs
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="active nav-link"
                      data-rb-event-key="/dictionary"
                      href="/dictionary"
                    >
                      Dictionary
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/corpus"
                      href="/corpus"
                    >
                      Corpus
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/library"
                      href="/library"
                    >
                      Library
                    </a>
                  </div>
                </div>
                <div
                  class="mx-auto navbar-nav"
                >
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/about"
                      href="/about"
                    >
                      About
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/bibliography"
                      href="/bibliography"
                    >
                      Bibliography
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/tools"
                      href="/tools"
                    >
                      Tools
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/projects"
                      href="/projects"
                    >
                      Projects
                    </a>
                  </div>
                </div>
              </div>
              <span
                class="navbar-text"
                id="user"
              >
                <button
                  class="btn btn-outline-secondary btn-sm"
                  type="button"
                >
                  Logout 
                  Test
                </button>
              </span>
            </div>
          </div>
        </div>
      </nav>
    </header>
    <main
      class="main"
    >
      <div
        class="main__content"
      >
        <header
          class="main__header"
        >
          <nav
            aria-label="breadcrumb"
            class="main__breadcrumbs"
          >
            <ol
              class="breadcrumb"
            >
              <li
                class="breadcrumb-item active"
              >
                <a
                  href="/"
                >
                  eBL
                </a>
              </li>
              <li
                aria-current="page"
                class="breadcrumb-item active"
              >
                Dictionary
              </li>
            </ol>
          </nav>
          <h2
            class="main__heading"
          >
            Dictionary
          </h2>
          <div
            class="main__toolbar btn-toolbar"
            role="toolbar"
          />
        </header>
        <div
          class="Dictionary-search"
        >
          <form
            class=""
          >
            <div
              class="form-group row"
            >
              <label
                class="form-label col-form-label col-sm-3"
                for="word"
              >
                Word
              </label>
              <div
                class="col-sm-1"
              >
                <i
                  class="fas fa-info-circle"
                />
              </div>
              <div
                class="col-sm-6"
              >
                <input
                  class="form-control"
                  id="word"
                  placeholder="word"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="col-sm-2"
              >
                <button
                  class="btn btn-primary"
                  type="submit"
                >
                  Query
                </button>
              </div>
            </div>
            <div
              class="form-group row"
            >
              <label
                class="form-label col-form-label col-sm-3"
                for="meaning"
              >
                Meaning
              </label>
              <div
                class="col-sm-1"
              >
                <i
                  class="fas fa-info-circle"
                />
              </div>
              <div
                class="col-sm-6"
              >
                <input
                  class="form-control"
                  id="meaning"
                  placeholder="meaning"
                  type="text"
                  value="some meaning"
                />
              </div>
            </div>
            <div
              class="form-group row"
            >
              <label
                class="form-label col-form-label col-sm-3"
                for="root"
              >
                Root
              </label>
              <div
                class="col-sm-1"
              >
                <i
                  class="fas fa-info-circle"
                />
              </div>
              <div
                class="col-sm-6"
              >
                <input
                  class="form-control"
                  id="root"
                  placeholder="root"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="form-group row"
            >
              <label
                class="form-label col-form-label col-sm-3"
                for="vowelClass"
              >
                Vowel class
              </label>
              <div
                class="col-sm-1"
              >
                <i
                  class="fas fa-info-circle"
                />
              </div>
              <div
                class="col-sm-6"
              >
                <div>
                  <div
                    style="margin-bottom: 0.5rem;"
                  >
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-a/a"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-a/a"
                        title=""
                      >
                        a/a
                      </label>
                    </div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-a/i"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-a/i"
                        title=""
                      >
                        a/i
                      </label>
                    </div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-a/u"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-a/u"
                        title=""
                      >
                        a/u
                      </label>
                    </div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-e/e"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-e/e"
                        title=""
                      >
                        e/e
                      </label>
                    </div>
                  </div>
                  <div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-e/u"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-e/u"
                        title=""
                      >
                        e/u
                      </label>
                    </div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-i/i"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-i/i"
                        title=""
                      >
                        i/i
                      </label>
                    </div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-u/u"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-u/u"
                        title=""
                      >
                        u/u
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr />
            <div
              class="form-group row"
            >
              <label
                class="form-label col-form-label col-sm-3"
                for="origin"
              >
                Dictionary source
              </label>
              <div
                class="col-sm-1"
              >
                <i
                  class="fas fa-info-circle"
                />
              </div>
              <div
                class="col-sm-8"
              >
                <div>
                  <div
                    class="custom-control custom-switch"
                    style="font-weight: bold; margin-right: 1rem;"
                  >
                    <input
                      class="custom-control-input"
                      id="origin-all"
                      type="checkbox"
                    />
                    <label
                      class="custom-control-label"
                      for="origin-all"
                      title=""
                    >
                      All sources
                    </label>
                  </div>
                  <div
                    class="custom-control custom-switch custom-control-inline"
                  >
                    <input
                      checked=""
                      class="custom-control-input"
                      id="origin-CDA"
                      type="checkbox"
                    />
                    <label
                      class="custom-control-label"
                      for="origin-CDA"
                      title=""
                    >
                      Concise Dictionary of Akkadian
                    </label>
                  </div>
                  <div
                    class="custom-control custom-switch custom-control-inline"
                  >
                    <input
                      class="custom-control-input"
                      id="origin-AFO_REGISTER"
                      type="checkbox"
                    />
                    <label
                      class="custom-control-label"
                      for="origin-AFO_REGISTER"
                      title=""
                    >
                      AfO Register
                    </label>
                  </div>
                  <div
                    class="custom-control custom-switch custom-control-inline"
                  >
                    <input
                      class="custom-control-input"
                      id="origin-SAD"
                      type="checkbox"
                    />
                    <label
                      class="custom-control-label"
                      for="origin-SAD"
                      title=""
                    >
                      Supplements to the Akkadian Dictionaries
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </form>
        </div>
        <ul
          class="WordSearch-results"
        >
          <li
            class="WordSearch-results__result"
          >
            <div
              class="Word"
            >
              <a
                class="BibliographySearch__edit"
                href="/dictionary/test I/edit"
              >
                <i
                  class="fas fa-edit"
                />
              </a>
              <dfn
                title="test I"
              >
                <strong>
                  <a
                    href="/dictionary/test%20I"
                  >
                    
                    test
                  </a>
                </strong>
                 I
              </dfn>
              <ul
                class="Word__forms"
              >
                <li
                  class="Word__form"
                >
                  <span
                    class="Notes-note"
                  >
                    dsdsds
                     
                  </span>
                  <em />
                </li>
                <li
                  class="Word__form"
                >
                  <span
                    class="Notes-note"
                  >
                    <strong>
                      BOLD
                    </strong>
                     
                  </span>
                  <em>
                    abā'um
                  </em>
                </li>
              </ul>
               
              ~
               "to weed" O/jB
               
              <ul>
                <li>
                  <strong>
                    G
                  </strong>
                   
                  (
                  <em>
                    i/i
                  </em>
                  ) field
                   
                  <ul>
                    <li
                      class="AmplifiedMeanings__entry"
                    >
                      <strong>
                        1.
                      </strong>
                       
                      mmkkk
                    </li>
                  </ul>
                </li>
              </ul>
               
              <ul>
                <li>
                  <ul
                    class="Derived__group"
                  >
                    <li
                      class="Derived__entry"
                    >
                      <em>
                        wabûtu
                      </em>
                       I
                    </li>
                  </ul>
                </li>
              </ul>
               
              <span
                class="Word__derivedFrom"
              >
                <em>
                  sadasd
                </em>
                
              </span>
            </div>
          </li>
        </ul>
      </div>
    </main>
    <footer
      class="main-footer"
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="/impressum"
          >
            Impressum
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="/datenschutz"
          >
            Datenschutz
          </a>
        </li>
      </ol>
    </footer>
  </div>
</div>
`;

exports[`Root 1`] = `
<div>
  <div
    class="main-body"
  >
    <header
      class="Header"
    >
      <nav
        class="navbar navbar-expand-md navbar-light"
      >
        <div
          class="container"
        >
          <a
            class="active navbar-brand"
            href="/"
            title="electronic Babylonian Library (eBL)"
          >
            <h1
              class="Header__title"
            >
              <span
                class="Header__title-main"
              >
                electronic
                <br />
                <span
                  class="Header__title-main__caps"
                >
                  B
                </span>
                abylonian
                <br />
                <span
                  class="Header__title-main__caps"
                >
                  L
                </span>
                ibrary
              </span>
              <small
                class="Header__title-abbreviation"
              >
                e
                <small
                  class="Header__title-abbreviation__caps"
                >
                  bl
                </small>
              </small>
            </h1>
          </a>
          <span
            class="navbar-brand"
          >
            <div
              class="Header__logo-container container"
            >
              <a
                href="https://www.lmu.de"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  class="Header__lmu-logo img-fluid"
                  src="LMU_Logo.svg"
                />
              </a>
              <a
                href="https://badw.de/"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  class="Header__badw-logo img-fluid"
                  src="BAdW_Logo.svg"
                />
              </a>
            </div>
          </span>
          <button
            aria-controls="Header-39"
            aria-label="Toggle navigation"
            class="navbar-toggler collapsed"
            type="button"
          >
            <span
              class="navbar-toggler-icon"
            />
          </button>
          <div
            class="navbar-collapse collapse"
            id="Header-39"
          >
            <div
              class="d-flex justify-content-between"
              id="navbar-container"
            >
              <div
                id="menu-lines"
              >
                <div
                  class="mx-auto navbar-nav"
                >
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/signs"
                      href="/signs"
                    >
                      Signs
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="active nav-link"
                      data-rb-event-key="/dictionary"
                      href="/dictionary"
                    >
                      Dictionary
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/corpus"
                      href="/corpus"
                    >
                      Corpus
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/library"
                      href="/library"
                    >
                      Library
                    </a>
                  </div>
                </div>
                <div
                  class="mx-auto navbar-nav"
                >
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/about"
                      href="/about"
                    >
                      About
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/bibliography"
                      href="/bibliography"
                    >
                      Bibliography
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/tools"
                      href="/tools"
                    >
                      Tools
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/projects"
                      href="/projects"
                    >
                      Projects
                    </a>
                  </div>
                </div>
              </div>
              <span
                class="navbar-text"
                id="user"
              >
                <button
                  class="btn btn-outline-secondary btn-sm"
                  type="button"
                >
                  Logout 
                  Test
                </button>
              </span>
            </div>
          </div>
        </div>
      </nav>
    </header>
    <main
      class="main"
    >
      <div
        class="main__content"
      >
        <header
          class="main__header"
        >
          <nav
            aria-label="breadcrumb"
            class="main__breadcrumbs"
          >
            <ol
              class="breadcrumb"
            >
              <li
                class="breadcrumb-item active"
              >
                <a
                  href="/"
                >
                  eBL
                </a>
              </li>
              <li
                aria-current="page"
                class="breadcrumb-item active"
              >
                Dictionary
              </li>
            </ol>
          </nav>
          <h2
            class="main__heading"
          >
            Dictionary
          </h2>
          <div
            class="main__toolbar btn-toolbar"
            role="toolbar"
          />
        </header>
        <div
          class="Dictionary-search"
        >
          <form
            class=""
          >
            <div
              class="form-group row"
            >
              <label
                class="form-label col-form-label col-sm-3"
                for="word"
              >
                Word
              </label>
              <div
                class="col-sm-1"
              >
                <i
                  class="fas fa-info-circle"
                />
              </div>
              <div
                class="col-sm-6"
              >
                <input
                  class="form-control"
                  id="word"
                  placeholder="word"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="col-sm-2"
              >
                <button
                  class="btn btn-primary"
                  type="submit"
                >
                  Query
                </button>
              </div>
            </div>
            <div
              class="form-group row"
            >
              <label
                class="form-label col-form-label col-sm-3"
                for="meaning"
              >
                Meaning
              </label>
              <div
                class="col-sm-1"
              >
                <i
                  class="fas fa-info-circle"
                />
              </div>
              <div
                class="col-sm-6"
              >
                <input
                  class="form-control"
                  id="meaning"
                  placeholder="meaning"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="form-group row"
            >
              <label
                class="form-label col-form-label col-sm-3"
                for="root"
              >
                Root
              </label>
              <div
                class="col-sm-1"
              >
                <i
                  class="fas fa-info-circle"
                />
              </div>
              <div
                class="col-sm-6"
              >
                <input
                  class="form-control"
                  id="root"
                  placeholder="root"
                  type="text"
                  value="lmm"
                />
              </div>
            </div>
            <div
              class="form-group row"
            >
              <label
                class="form-label col-form-label col-sm-3"
                for="vowelClass"
              >
                Vowel class
              </label>
              <div
                class="col-sm-1"
              >
                <i
                  class="fas fa-info-circle"
                />
              </div>
              <div
                class="col-sm-6"
              >
                <div>
                  <div
                    style="margin-bottom: 0.5rem;"
                  >
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-a/a"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-a/a"
                        title=""
                      >
                        a/a
                      </label>
                    </div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-a/i"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-a/i"
                        title=""
                      >
                        a/i
                      </label>
                    </div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-a/u"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-a/u"
                        title=""
                      >
                        a/u
                      </label>
                    </div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-e/e"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-e/e"
                        title=""
                      >
                        e/e
                      </label>
                    </div>
                  </div>
                  <div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-e/u"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-e/u"
                        title=""
                      >
                        e/u
                      </label>
                    </div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-i/i"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-i/i"
                        title=""
                      >
                        i/i
                      </label>
                    </div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-u/u"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-u/u"
                        title=""
                      >
                        u/u
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr />
            <div
              class="form-group row"
            >
              <label
                class="form-label col-form-label col-sm-3"
                for="origin"
              >
                Dictionary source
              </label>
              <div
                class="col-sm-1"
              >
                <i
                  class="fas fa-info-circle"
                />
              </div>
              <div
                class="col-sm-8"
              >
                <div>
                  <div
                    class="custom-control custom-switch"
                    style="font-weight: bold; margin-right: 1rem;"
                  >
                    <input
                      class="custom-control-input"
                      id="origin-all"
                      type="checkbox"
                    />
                    <label
                      class="custom-control-label"
                      for="origin-all"
                      title=""
                    >
                      All sources
                    </label>
                  </div>
                  <div
                    class="custom-control custom-switch custom-control-inline"
                  >
                    <input
                      checked=""
                      class="custom-control-input"
                      id="origin-CDA"
                      type="checkbox"
                    />
                    <label
                      class="custom-control-label"
                      for="origin-CDA"
                      title=""
                    >
                      Concise Dictionary of Akkadian
                    </label>
                  </div>
                  <div
                    class="custom-control custom-switch custom-control-inline"
                  >
                    <input
                      class="custom-control-input"
                      id="origin-AFO_REGISTER"
                      type="checkbox"
                    />
                    <label
                      class="custom-control-label"
                      for="origin-AFO_REGISTER"
                      title=""
                    >
                      AfO Register
                    </label>
                  </div>
                  <div
                    class="custom-control custom-switch custom-control-inline"
                  >
                    <input
                      class="custom-control-input"
                      id="origin-SAD"
                      type="checkbox"
                    />
                    <label
                      class="custom-control-label"
                      for="origin-SAD"
                      title=""
                    >
                      Supplements to the Akkadian Dictionaries
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </form>
        </div>
        <ul
          class="WordSearch-results"
        >
          <li
            class="WordSearch-results__result"
          >
            <div
              class="Word"
            >
              <a
                class="BibliographySearch__edit"
                href="/dictionary/test I/edit"
              >
                <i
                  class="fas fa-edit"
                />
              </a>
              <dfn
                title="test I"
              >
                <strong>
                  <a
                    href="/dictionary/test%20I"
                  >
                    
                    test
                  </a>
                </strong>
                 I
              </dfn>
              <ul
                class="Word__forms"
              >
                <li
                  class="Word__form"
                >
                  <span
                    class="Notes-note"
                  >
                    dsdsds
                     
                  </span>
                  <em />
                </li>
                <li
                  class="Word__form"
                >
                  <span
                    class="Notes-note"
                  >
                    <strong>
                      BOLD
                    </strong>
                     
                  </span>
                  <em>
                    abā'um
                  </em>
                </li>
              </ul>
               
              ~
               "to weed" O/jB
               
              <ul>
                <li>
                  <strong>
                    G
                  </strong>
                   
                  (
                  <em>
                    i/i
                  </em>
                  ) field
                   
                  <ul>
                    <li
                      class="AmplifiedMeanings__entry"
                    >
                      <strong>
                        1.
                      </strong>
                       
                      mmkkk
                    </li>
                  </ul>
                </li>
              </ul>
               
              <ul>
                <li>
                  <ul
                    class="Derived__group"
                  >
                    <li
                      class="Derived__entry"
                    >
                      <em>
                        wabûtu
                      </em>
                       I
                    </li>
                  </ul>
                </li>
              </ul>
               
              <span
                class="Word__derivedFrom"
              >
                <em>
                  sadasd
                </em>
                
              </span>
            </div>
          </li>
        </ul>
      </div>
    </main>
    <footer
      class="main-footer"
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="/impressum"
          >
            Impressum
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="/datenschutz"
          >
            Datenschutz
          </a>
        </li>
      </ol>
    </footer>
  </div>
</div>
`;

exports[`Snapshot 1`] = `
<div>
  <div
    class="main-body"
  >
    <header
      class="Header"
    >
      <nav
        class="navbar navbar-expand-md navbar-light"
      >
        <div
          class="container"
        >
          <a
            class="active navbar-brand"
            href="/"
            title="electronic Babylonian Library (eBL)"
          >
            <h1
              class="Header__title"
            >
              <span
                class="Header__title-main"
              >
                electronic
                <br />
                <span
                  class="Header__title-main__caps"
                >
                  B
                </span>
                abylonian
                <br />
                <span
                  class="Header__title-main__caps"
                >
                  L
                </span>
                ibrary
              </span>
              <small
                class="Header__title-abbreviation"
              >
                e
                <small
                  class="Header__title-abbreviation__caps"
                >
                  bl
                </small>
              </small>
            </h1>
          </a>
          <span
            class="navbar-brand"
          >
            <div
              class="Header__logo-container container"
            >
              <a
                href="https://www.lmu.de"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  class="Header__lmu-logo img-fluid"
                  src="LMU_Logo.svg"
                />
              </a>
              <a
                href="https://badw.de/"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  class="Header__badw-logo img-fluid"
                  src="BAdW_Logo.svg"
                />
              </a>
            </div>
          </span>
          <button
            aria-controls="Header-1"
            aria-label="Toggle navigation"
            class="navbar-toggler collapsed"
            type="button"
          >
            <span
              class="navbar-toggler-icon"
            />
          </button>
          <div
            class="navbar-collapse collapse"
            id="Header-1"
          >
            <div
              class="d-flex justify-content-between"
              id="navbar-container"
            >
              <div
                id="menu-lines"
              >
                <div
                  class="mx-auto navbar-nav"
                >
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/signs"
                      href="/signs"
                    >
                      Signs
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="active nav-link"
                      data-rb-event-key="/dictionary"
                      href="/dictionary"
                    >
                      Dictionary
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/corpus"
                      href="/corpus"
                    >
                      Corpus
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/library"
                      href="/library"
                    >
                      Library
                    </a>
                  </div>
                </div>
                <div
                  class="mx-auto navbar-nav"
                >
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/about"
                      href="/about"
                    >
                      About
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/bibliography"
                      href="/bibliography"
                    >
                      Bibliography
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/tools"
                      href="/tools"
                    >
                      Tools
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/projects"
                      href="/projects"
                    >
                      Projects
                    </a>
                  </div>
                </div>
              </div>
              <span
                class="navbar-text"
                id="user"
              >
                <button
                  class="btn btn-outline-secondary btn-sm"
                  type="button"
                >
                  Logout 
                  Test
                </button>
              </span>
            </div>
          </div>
        </div>
      </nav>
    </header>
    <main
      class="main"
    >
      <div
        class="main__content"
      >
        <header
          class="main__header"
        >
          <nav
            aria-label="breadcrumb"
            class="main__breadcrumbs"
          >
            <ol
              class="breadcrumb"
            >
              <li
                class="breadcrumb-item active"
              >
                <a
                  href="/"
                >
                  eBL
                </a>
              </li>
              <li
                aria-current="page"
                class="breadcrumb-item active"
              >
                Dictionary
              </li>
            </ol>
          </nav>
          <h2
            class="main__heading"
          >
            Dictionary
          </h2>
          <div
            class="main__toolbar btn-toolbar"
            role="toolbar"
          />
        </header>
        <div
          class="Dictionary-search"
        >
          <form
            class=""
          >
            <div
              class="form-group row"
            >
              <label
                class="form-label col-form-label col-sm-3"
                for="word"
              >
                Word
              </label>
              <div
                class="col-sm-1"
              >
                <i
                  class="fas fa-info-circle"
                />
              </div>
              <div
                class="col-sm-6"
              >
                <input
                  class="form-control"
                  id="word"
                  placeholder="word"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="col-sm-2"
              >
                <button
                  class="btn btn-primary"
                  disabled=""
                  type="submit"
                >
                  Query
                </button>
              </div>
            </div>
            <div
              class="form-group row"
            >
              <label
                class="form-label col-form-label col-sm-3"
                for="meaning"
              >
                Meaning
              </label>
              <div
                class="col-sm-1"
              >
                <i
                  class="fas fa-info-circle"
                />
              </div>
              <div
                class="col-sm-6"
              >
                <input
                  class="form-control"
                  id="meaning"
                  placeholder="meaning"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="form-group row"
            >
              <label
                class="form-label col-form-label col-sm-3"
                for="root"
              >
                Root
              </label>
              <div
                class="col-sm-1"
              >
                <i
                  class="fas fa-info-circle"
                />
              </div>
              <div
                class="col-sm-6"
              >
                <input
                  class="form-control"
                  id="root"
                  placeholder="root"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="form-group row"
            >
              <label
                class="form-label col-form-label col-sm-3"
                for="vowelClass"
              >
                Vowel class
              </label>
              <div
                class="col-sm-1"
              >
                <i
                  class="fas fa-info-circle"
                />
              </div>
              <div
                class="col-sm-6"
              >
                <div>
                  <div
                    style="margin-bottom: 0.5rem;"
                  >
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-a/a"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-a/a"
                        title=""
                      >
                        a/a
                      </label>
                    </div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-a/i"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-a/i"
                        title=""
                      >
                        a/i
                      </label>
                    </div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-a/u"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-a/u"
                        title=""
                      >
                        a/u
                      </label>
                    </div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-e/e"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-e/e"
                        title=""
                      >
                        e/e
                      </label>
                    </div>
                  </div>
                  <div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-e/u"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-e/u"
                        title=""
                      >
                        e/u
                      </label>
                    </div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-i/i"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-i/i"
                        title=""
                      >
                        i/i
                      </label>
                    </div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-u/u"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-u/u"
                        title=""
                      >
                        u/u
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr />
            <div
              class="form-group row"
            >
              <label
                class="form-label col-form-label col-sm-3"
                for="origin"
              >
                Dictionary source
              </label>
              <div
                class="col-sm-1"
              >
                <i
                  class="fas fa-info-circle"
                />
              </div>
              <div
                class="col-sm-8"
              >
                <div>
                  <div
                    class="custom-control custom-switch"
                    style="font-weight: bold; margin-right: 1rem;"
                  >
                    <input
                      class="custom-control-input"
                      id="origin-all"
                      type="checkbox"
                    />
                    <label
                      class="custom-control-label"
                      for="origin-all"
                      title=""
                    >
                      All sources
                    </label>
                  </div>
                  <div
                    class="custom-control custom-switch custom-control-inline"
                  >
                    <input
                      checked=""
                      class="custom-control-input"
                      id="origin-CDA"
                      type="checkbox"
                    />
                    <label
                      class="custom-control-label"
                      for="origin-CDA"
                      title=""
                    >
                      Concise Dictionary of Akkadian
                    </label>
                  </div>
                  <div
                    class="custom-control custom-switch custom-control-inline"
                  >
                    <input
                      class="custom-control-input"
                      id="origin-AFO_REGISTER"
                      type="checkbox"
                    />
                    <label
                      class="custom-control-label"
                      for="origin-AFO_REGISTER"
                      title=""
                    >
                      AfO Register
                    </label>
                  </div>
                  <div
                    class="custom-control custom-switch custom-control-inline"
                  >
                    <input
                      class="custom-control-input"
                      id="origin-SAD"
                      type="checkbox"
                    />
                    <label
                      class="custom-control-label"
                      for="origin-SAD"
                      title=""
                    >
                      Supplements to the Akkadian Dictionaries
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </form>
        </div>
        <ul
          class="WordSearch-results"
        />
      </div>
    </main>
    <footer
      class="main-footer"
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="/impressum"
          >
            Impressum
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="/datenschutz"
          >
            Datenschutz
          </a>
        </li>
      </ol>
    </footer>
  </div>
</div>
`;

exports[`Vowel class 1`] = `
<div>
  <div
    class="main-body"
  >
    <header
      class="Header"
    >
      <nav
        class="navbar navbar-expand-md navbar-light"
      >
        <div
          class="container"
        >
          <a
            class="active navbar-brand"
            href="/"
            title="electronic Babylonian Library (eBL)"
          >
            <h1
              class="Header__title"
            >
              <span
                class="Header__title-main"
              >
                electronic
                <br />
                <span
                  class="Header__title-main__caps"
                >
                  B
                </span>
                abylonian
                <br />
                <span
                  class="Header__title-main__caps"
                >
                  L
                </span>
                ibrary
              </span>
              <small
                class="Header__title-abbreviation"
              >
                e
                <small
                  class="Header__title-abbreviation__caps"
                >
                  bl
                </small>
              </small>
            </h1>
          </a>
          <span
            class="navbar-brand"
          >
            <div
              class="Header__logo-container container"
            >
              <a
                href="https://www.lmu.de"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  class="Header__lmu-logo img-fluid"
                  src="LMU_Logo.svg"
                />
              </a>
              <a
                href="https://badw.de/"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  class="Header__badw-logo img-fluid"
                  src="BAdW_Logo.svg"
                />
              </a>
            </div>
          </span>
          <button
            aria-controls="Header-55"
            aria-label="Toggle navigation"
            class="navbar-toggler collapsed"
            type="button"
          >
            <span
              class="navbar-toggler-icon"
            />
          </button>
          <div
            class="navbar-collapse collapse"
            id="Header-55"
          >
            <div
              class="d-flex justify-content-between"
              id="navbar-container"
            >
              <div
                id="menu-lines"
              >
                <div
                  class="mx-auto navbar-nav"
                >
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/signs"
                      href="/signs"
                    >
                      Signs
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="active nav-link"
                      data-rb-event-key="/dictionary"
                      href="/dictionary"
                    >
                      Dictionary
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/corpus"
                      href="/corpus"
                    >
                      Corpus
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/library"
                      href="/library"
                    >
                      Library
                    </a>
                  </div>
                </div>
                <div
                  class="mx-auto navbar-nav"
                >
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/about"
                      href="/about"
                    >
                      About
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/bibliography"
                      href="/bibliography"
                    >
                      Bibliography
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/tools"
                      href="/tools"
                    >
                      Tools
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/projects"
                      href="/projects"
                    >
                      Projects
                    </a>
                  </div>
                </div>
              </div>
              <span
                class="navbar-text"
                id="user"
              >
                <button
                  class="btn btn-outline-secondary btn-sm"
                  type="button"
                >
                  Logout 
                  Test
                </button>
              </span>
            </div>
          </div>
        </div>
      </nav>
    </header>
    <main
      class="main"
    >
      <div
        class="main__content"
      >
        <header
          class="main__header"
        >
          <nav
            aria-label="breadcrumb"
            class="main__breadcrumbs"
          >
            <ol
              class="breadcrumb"
            >
              <li
                class="breadcrumb-item active"
              >
                <a
                  href="/"
                >
                  eBL
                </a>
              </li>
              <li
                aria-current="page"
                class="breadcrumb-item active"
              >
                Dictionary
              </li>
            </ol>
          </nav>
          <h2
            class="main__heading"
          >
            Dictionary
          </h2>
          <div
            class="main__toolbar btn-toolbar"
            role="toolbar"
          />
        </header>
        <div
          class="Dictionary-search"
        >
          <form
            class=""
          >
            <div
              class="form-group row"
            >
              <label
                class="form-label col-form-label col-sm-3"
                for="word"
              >
                Word
              </label>
              <div
                class="col-sm-1"
              >
                <i
                  class="fas fa-info-circle"
                />
              </div>
              <div
                class="col-sm-6"
              >
                <input
                  class="form-control"
                  id="word"
                  placeholder="word"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="col-sm-2"
              >
                <button
                  class="btn btn-primary"
                  type="submit"
                >
                  Query
                </button>
              </div>
            </div>
            <div
              class="form-group row"
            >
              <label
                class="form-label col-form-label col-sm-3"
                for="meaning"
              >
                Meaning
              </label>
              <div
                class="col-sm-1"
              >
                <i
                  class="fas fa-info-circle"
                />
              </div>
              <div
                class="col-sm-6"
              >
                <input
                  class="form-control"
                  id="meaning"
                  placeholder="meaning"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="form-group row"
            >
              <label
                class="form-label col-form-label col-sm-3"
                for="root"
              >
                Root
              </label>
              <div
                class="col-sm-1"
              >
                <i
                  class="fas fa-info-circle"
                />
              </div>
              <div
                class="col-sm-6"
              >
                <input
                  class="form-control"
                  id="root"
                  placeholder="root"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="form-group row"
            >
              <label
                class="form-label col-form-label col-sm-3"
                for="vowelClass"
              >
                Vowel class
              </label>
              <div
                class="col-sm-1"
              >
                <i
                  class="fas fa-info-circle"
                />
              </div>
              <div
                class="col-sm-6"
              >
                <div>
                  <div
                    style="margin-bottom: 0.5rem;"
                  >
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-a/a"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-a/a"
                        title=""
                      >
                        a/a
                      </label>
                    </div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-a/i"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-a/i"
                        title=""
                      >
                        a/i
                      </label>
                    </div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-a/u"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-a/u"
                        title=""
                      >
                        a/u
                      </label>
                    </div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-e/e"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-e/e"
                        title=""
                      >
                        e/e
                      </label>
                    </div>
                  </div>
                  <div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-e/u"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-e/u"
                        title=""
                      >
                        e/u
                      </label>
                    </div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-i/i"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-i/i"
                        title=""
                      >
                        i/i
                      </label>
                    </div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-u/u"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-u/u"
                        title=""
                      >
                        u/u
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr />
            <div
              class="form-group row"
            >
              <label
                class="form-label col-form-label col-sm-3"
                for="origin"
              >
                Dictionary source
              </label>
              <div
                class="col-sm-1"
              >
                <i
                  class="fas fa-info-circle"
                />
              </div>
              <div
                class="col-sm-8"
              >
                <div>
                  <div
                    class="custom-control custom-switch"
                    style="font-weight: bold; margin-right: 1rem;"
                  >
                    <input
                      class="custom-control-input"
                      id="origin-all"
                      type="checkbox"
                    />
                    <label
                      class="custom-control-label"
                      for="origin-all"
                      title=""
                    >
                      All sources
                    </label>
                  </div>
                  <div
                    class="custom-control custom-switch custom-control-inline"
                  >
                    <input
                      checked=""
                      class="custom-control-input"
                      id="origin-CDA"
                      type="checkbox"
                    />
                    <label
                      class="custom-control-label"
                      for="origin-CDA"
                      title=""
                    >
                      Concise Dictionary of Akkadian
                    </label>
                  </div>
                  <div
                    class="custom-control custom-switch custom-control-inline"
                  >
                    <input
                      class="custom-control-input"
                      id="origin-AFO_REGISTER"
                      type="checkbox"
                    />
                    <label
                      class="custom-control-label"
                      for="origin-AFO_REGISTER"
                      title=""
                    >
                      AfO Register
                    </label>
                  </div>
                  <div
                    class="custom-control custom-switch custom-control-inline"
                  >
                    <input
                      class="custom-control-input"
                      id="origin-SAD"
                      type="checkbox"
                    />
                    <label
                      class="custom-control-label"
                      for="origin-SAD"
                      title=""
                    >
                      Supplements to the Akkadian Dictionaries
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </form>
        </div>
        <ul
          class="WordSearch-results"
        >
          <li
            class="WordSearch-results__result"
          >
            <div
              class="Word"
            >
              <a
                class="BibliographySearch__edit"
                href="/dictionary/test I/edit"
              >
                <i
                  class="fas fa-edit"
                />
              </a>
              <dfn
                title="test I"
              >
                <strong>
                  <a
                    href="/dictionary/test%20I"
                  >
                    
                    test
                  </a>
                </strong>
                 I
              </dfn>
              <ul
                class="Word__forms"
              >
                <li
                  class="Word__form"
                >
                  <span
                    class="Notes-note"
                  >
                    dsdsds
                     
                  </span>
                  <em />
                </li>
                <li
                  class="Word__form"
                >
                  <span
                    class="Notes-note"
                  >
                    <strong>
                      BOLD
                    </strong>
                     
                  </span>
                  <em>
                    abā'um
                  </em>
                </li>
              </ul>
               
              ~
               "to weed" O/jB
               
              <ul>
                <li>
                  <strong>
                    G
                  </strong>
                   
                  (
                  <em>
                    i/i
                  </em>
                  ) field
                   
                  <ul>
                    <li
                      class="AmplifiedMeanings__entry"
                    >
                      <strong>
                        1.
                      </strong>
                       
                      mmkkk
                    </li>
                  </ul>
                </li>
              </ul>
               
              <ul>
                <li>
                  <ul
                    class="Derived__group"
                  >
                    <li
                      class="Derived__entry"
                    >
                      <em>
                        wabûtu
                      </em>
                       I
                    </li>
                  </ul>
                </li>
              </ul>
               
              <span
                class="Word__derivedFrom"
              >
                <em>
                  sadasd
                </em>
                
              </span>
            </div>
          </li>
        </ul>
      </div>
    </main>
    <footer
      class="main-footer"
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="/impressum"
          >
            Impressum
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="/datenschutz"
          >
            Datenschutz
          </a>
        </li>
      </ol>
    </footer>
  </div>
</div>
`;

exports[`Word 1`] = `
<div>
  <div
    class="main-body"
  >
    <header
      class="Header"
    >
      <nav
        class="navbar navbar-expand-md navbar-light"
      >
        <div
          class="container"
        >
          <a
            class="active navbar-brand"
            href="/"
            title="electronic Babylonian Library (eBL)"
          >
            <h1
              class="Header__title"
            >
              <span
                class="Header__title-main"
              >
                electronic
                <br />
                <span
                  class="Header__title-main__caps"
                >
                  B
                </span>
                abylonian
                <br />
                <span
                  class="Header__title-main__caps"
                >
                  L
                </span>
                ibrary
              </span>
              <small
                class="Header__title-abbreviation"
              >
                e
                <small
                  class="Header__title-abbreviation__caps"
                >
                  bl
                </small>
              </small>
            </h1>
          </a>
          <span
            class="navbar-brand"
          >
            <div
              class="Header__logo-container container"
            >
              <a
                href="https://www.lmu.de"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  class="Header__lmu-logo img-fluid"
                  src="LMU_Logo.svg"
                />
              </a>
              <a
                href="https://badw.de/"
                rel="noopener noreferrer"
                target="_blank"
              >
                <img
                  class="Header__badw-logo img-fluid"
                  src="BAdW_Logo.svg"
                />
              </a>
            </div>
          </span>
          <button
            aria-controls="Header-7"
            aria-label="Toggle navigation"
            class="navbar-toggler collapsed"
            type="button"
          >
            <span
              class="navbar-toggler-icon"
            />
          </button>
          <div
            class="navbar-collapse collapse"
            id="Header-7"
          >
            <div
              class="d-flex justify-content-between"
              id="navbar-container"
            >
              <div
                id="menu-lines"
              >
                <div
                  class="mx-auto navbar-nav"
                >
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/signs"
                      href="/signs"
                    >
                      Signs
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="active nav-link"
                      data-rb-event-key="/dictionary"
                      href="/dictionary"
                    >
                      Dictionary
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/corpus"
                      href="/corpus"
                    >
                      Corpus
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/library"
                      href="/library"
                    >
                      Library
                    </a>
                  </div>
                </div>
                <div
                  class="mx-auto navbar-nav"
                >
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/about"
                      href="/about"
                    >
                      About
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/bibliography"
                      href="/bibliography"
                    >
                      Bibliography
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/tools"
                      href="/tools"
                    >
                      Tools
                    </a>
                  </div>
                  <div
                    class="nav-item"
                  >
                    <a
                      class="nav-link"
                      data-rb-event-key="/projects"
                      href="/projects"
                    >
                      Projects
                    </a>
                  </div>
                </div>
              </div>
              <span
                class="navbar-text"
                id="user"
              >
                <button
                  class="btn btn-outline-secondary btn-sm"
                  type="button"
                >
                  Logout 
                  Test
                </button>
              </span>
            </div>
          </div>
        </div>
      </nav>
    </header>
    <main
      class="main"
    >
      <div
        class="main__content"
      >
        <header
          class="main__header"
        >
          <nav
            aria-label="breadcrumb"
            class="main__breadcrumbs"
          >
            <ol
              class="breadcrumb"
            >
              <li
                class="breadcrumb-item active"
              >
                <a
                  href="/"
                >
                  eBL
                </a>
              </li>
              <li
                aria-current="page"
                class="breadcrumb-item active"
              >
                Dictionary
              </li>
            </ol>
          </nav>
          <h2
            class="main__heading"
          >
            Dictionary
          </h2>
          <div
            class="main__toolbar btn-toolbar"
            role="toolbar"
          />
        </header>
        <div
          class="Dictionary-search"
        >
          <form
            class=""
          >
            <div
              class="form-group row"
            >
              <label
                class="form-label col-form-label col-sm-3"
                for="word"
              >
                Word
              </label>
              <div
                class="col-sm-1"
              >
                <i
                  class="fas fa-info-circle"
                />
              </div>
              <div
                class="col-sm-6"
              >
                <input
                  class="form-control"
                  id="word"
                  placeholder="word"
                  type="text"
                  value="lem[ma?]"
                />
              </div>
              <div
                class="col-sm-2"
              >
                <button
                  class="btn btn-primary"
                  type="submit"
                >
                  Query
                </button>
              </div>
            </div>
            <div
              class="form-group row"
            >
              <label
                class="form-label col-form-label col-sm-3"
                for="meaning"
              >
                Meaning
              </label>
              <div
                class="col-sm-1"
              >
                <i
                  class="fas fa-info-circle"
                />
              </div>
              <div
                class="col-sm-6"
              >
                <input
                  class="form-control"
                  id="meaning"
                  placeholder="meaning"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="form-group row"
            >
              <label
                class="form-label col-form-label col-sm-3"
                for="root"
              >
                Root
              </label>
              <div
                class="col-sm-1"
              >
                <i
                  class="fas fa-info-circle"
                />
              </div>
              <div
                class="col-sm-6"
              >
                <input
                  class="form-control"
                  id="root"
                  placeholder="root"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="form-group row"
            >
              <label
                class="form-label col-form-label col-sm-3"
                for="vowelClass"
              >
                Vowel class
              </label>
              <div
                class="col-sm-1"
              >
                <i
                  class="fas fa-info-circle"
                />
              </div>
              <div
                class="col-sm-6"
              >
                <div>
                  <div
                    style="margin-bottom: 0.5rem;"
                  >
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-a/a"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-a/a"
                        title=""
                      >
                        a/a
                      </label>
                    </div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-a/i"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-a/i"
                        title=""
                      >
                        a/i
                      </label>
                    </div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-a/u"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-a/u"
                        title=""
                      >
                        a/u
                      </label>
                    </div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-e/e"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-e/e"
                        title=""
                      >
                        e/e
                      </label>
                    </div>
                  </div>
                  <div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-e/u"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-e/u"
                        title=""
                      >
                        e/u
                      </label>
                    </div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-i/i"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-i/i"
                        title=""
                      >
                        i/i
                      </label>
                    </div>
                    <div
                      class="form-check form-check-inline"
                    >
                      <input
                        class="form-check-input"
                        id="vowel-u/u"
                        type="checkbox"
                      />
                      <label
                        class="form-check-label"
                        for="vowel-u/u"
                        title=""
                      >
                        u/u
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr />
            <div
              class="form-group row"
            >
              <label
                class="form-label col-form-label col-sm-3"
                for="origin"
              >
                Dictionary source
              </label>
              <div
                class="col-sm-1"
              >
                <i
                  class="fas fa-info-circle"
                />
              </div>
              <div
                class="col-sm-8"
              >
                <div>
                  <div
                    class="custom-control custom-switch"
                    style="font-weight: bold; margin-right: 1rem;"
                  >
                    <input
                      class="custom-control-input"
                      id="origin-all"
                      type="checkbox"
                    />
                    <label
                      class="custom-control-label"
                      for="origin-all"
                      title=""
                    >
                      All sources
                    </label>
                  </div>
                  <div
                    class="custom-control custom-switch custom-control-inline"
                  >
                    <input
                      checked=""
                      class="custom-control-input"
                      id="origin-CDA"
                      type="checkbox"
                    />
                    <label
                      class="custom-control-label"
                      for="origin-CDA"
                      title=""
                    >
                      Concise Dictionary of Akkadian
                    </label>
                  </div>
                  <div
                    class="custom-control custom-switch custom-control-inline"
                  >
                    <input
                      class="custom-control-input"
                      id="origin-AFO_REGISTER"
                      type="checkbox"
                    />
                    <label
                      class="custom-control-label"
                      for="origin-AFO_REGISTER"
                      title=""
                    >
                      AfO Register
                    </label>
                  </div>
                  <div
                    class="custom-control custom-switch custom-control-inline"
                  >
                    <input
                      class="custom-control-input"
                      id="origin-SAD"
                      type="checkbox"
                    />
                    <label
                      class="custom-control-label"
                      for="origin-SAD"
                      title=""
                    >
                      Supplements to the Akkadian Dictionaries
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </form>
        </div>
        <ul
          class="WordSearch-results"
        >
          <li
            class="WordSearch-results__result"
          >
            <div
              class="Word"
            >
              <a
                class="BibliographySearch__edit"
                href="/dictionary/test I/edit"
              >
                <i
                  class="fas fa-edit"
                />
              </a>
              <dfn
                title="test I"
              >
                <strong>
                  <a
                    href="/dictionary/test%20I"
                  >
                    
                    test
                  </a>
                </strong>
                 I
              </dfn>
              <ul
                class="Word__forms"
              >
                <li
                  class="Word__form"
                >
                  <span
                    class="Notes-note"
                  >
                    dsdsds
                     
                  </span>
                  <em />
                </li>
                <li
                  class="Word__form"
                >
                  <span
                    class="Notes-note"
                  >
                    <strong>
                      BOLD
                    </strong>
                     
                  </span>
                  <em>
                    abā'um
                  </em>
                </li>
              </ul>
               
              ~
               "to weed" O/jB
               
              <ul>
                <li>
                  <strong>
                    G
                  </strong>
                   
                  (
                  <em>
                    i/i
                  </em>
                  ) field
                   
                  <ul>
                    <li
                      class="AmplifiedMeanings__entry"
                    >
                      <strong>
                        1.
                      </strong>
                       
                      mmkkk
                    </li>
                  </ul>
                </li>
              </ul>
               
              <ul>
                <li>
                  <ul
                    class="Derived__group"
                  >
                    <li
                      class="Derived__entry"
                    >
                      <em>
                        wabûtu
                      </em>
                       I
                    </li>
                  </ul>
                </li>
              </ul>
               
              <span
                class="Word__derivedFrom"
              >
                <em>
                  sadasd
                </em>
                
              </span>
            </div>
          </li>
        </ul>
      </div>
    </main>
    <footer
      class="main-footer"
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="/impressum"
          >
            Impressum
          </a>
        </li>
        <li
          class="nav-item"
        >
          <a
            class="nav-link"
            href="/datenschutz"
          >
            Datenschutz
          </a>
        </li>
      </ol>
    </footer>
  </div>
</div>
`;
